summative.moria.Moria.scala.error
Erreur de compilation :
Moria:1: error: value !== is not a member of java.awt.Color
while (getCouleurSol()!==Color.green)
                      ^Moria:3: error: not found: value Direction
  {setDirection(Direction.EAST);avance()}
                ^Moria:4: error: not found: value Direction
if (estSurBiscuit){porteBiscuit();setDirection(Direction.WEST);while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
                                               ^