summative.moria.Moria.scala.code
while (getCouleurSol()!==Color.green)
while (!estSurBiscuit() && !estFaceMur())
	{setDirection(Direction.EAST);avance()}
if (estSurBiscuit){porteBiscuit();setDirection(Direction.WEST);while (!estSurBiscuit()){avance()};recule();poseBiscuit()}
if(estFaceMur){droite();avance();gauche();avance()}